# kinemind

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXPERIMENT_PROTOCOL.md  LICENSE  MATH.md  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  experiment_proposal.yml
.github/workflows/: ci.yml  codeql.yml  gitleaks.yml  pages.yml
irb/: README.md  consent_form.md  data_management_plan.md  debrief.md  participant_information_sheet.md
prereg/: README.md  h1_cell_count.yaml
python/origami_lab/: pyproject.toml
python/origami_lab/src/origami_lab/: __init__.py  bayes.py  cli.py  collision.py  coupling.py  io.py  kinematics.py  power.py  preregistration.py  se3.py  stats.py  strip.py  symmetry.py  tree.py
python/origami_lab/tests/: test_bayes.py  test_collision.py  test_coupling.py  test_io_stats_cli.py  test_kinematics.py  test_parity_with_ts.py  test_power.py  test_preregistration.py  test_se3.py  test_symmetry.py  test_tree.py
python/origami_lab/tests/data/: golden_strip_8.json
