[project]
name = "origami-lab"
version = "0.1.0"
description = "Origami strip kinematics and mental coupling analysis"
authors = [{ name = "hinanohart" }]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "sympy>=1.13",
    "typer>=0.15",
]

[project.optional-dependencies]
test = ["pytest>=8.3", "hypothesis>=6.118", "pytest-cov>=6.0"]

[project.scripts]
origami-lab = "origami_lab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/origami_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
